# task-tracker

./: .gitignore  README.md  docker-compose.yml
doc/: c4-containers.puml  c4-context.puml  er-diagram.puml
main_service/: .env  .gitignore  Cargo.toml  build.rs  common.proto  dockerfile  main.py  openapi.yml  requests.http  requests_hw2.http  requests_hw3.http  requests_hw4.http  requests_hw5.http
main_service/migrations/: 0001_create_table.sql
main_service/src/: lib.rs  main.rs
main_service/tests/: common.py  test.py
main_service_db/: dockerfile
stat_service/: common.proto  dockerfile  requirements.txt  server.py  stat.proto  test.py  test_common.py
tasks_service/: common.proto  dockerfile  requests.sh  requirements.txt  server.py  tasks.proto  tasks_pb2.py  tasks_pb2_grpc.py  test.py  test_common.py
tasks_service_db/: create_table.sql
